[BUGFIX #55095788] Fixes overflow on round avatar images

--- a/app/assets/stylesheets/partials/_patterns.scss
+++ b/app/assets/stylesheets/partials/_patterns.scss
@@ -1280,12 +1280,13 @@ input%proto-button {
 // --------------------------------------------------------
 // NB be sure to include <img> in your markup
 %round-avatar {
+  @include border-radius(100%);
   width: 4.8rem;
   height: 4.8rem;
   border: 0.2rem solid $tealLight;
-  border-radius: 100%;
   overflow: hidden;
   img {
+    @include border-radius(100%);
     display: block;
     width: 100%;
   }
